# sprocesstrial

./: .gitignore  GEMINI.md  README.md  SVisualTcl.log.BAK  check_sentaurus_connect.py  daily_automation_script.sh  medium_git_trial.py  oxide_maxed_high_aspect_ratio.py  pyproject.toml  remote_task.sh  run_task1.py  run_task2.py  sentaurus_automation.py  task1_combinations.json  task2_combinations.json  tdr2svg.py  tdr_svg.tcl  update_csv_results.py
asentaurusDemo/: ex0_simple_bosch.cmd  ex0_simple_measurement.cmd  ex1_high_density_plasma_etch.cmd  ex1_nothing_but_silicon.cmd  ex2_etch_and_depo.cmd  ex2_si_with_oxide_layer.cmd  ex3_ion_enchanced_etching.cmd  ex3_si_with_oxide_and_PR.cmd  ex4_PR_stripped.cmd  ex4_reactive_ion_etching.cmd  ex5_simple_bosch.cmd  simple_process copy 6.cmd
boschProcess/: BoschDRIE.cmd  DualLevelMEMSCavity.cmd  OxideMaskedHighAspectRatioEtch_withFlux.cmd  OxideMaskedHighAspectRatioEtch_withFlux_run_1.cmd  OxideMaskedHighAspectRatioEtch_withFlux_run_2.cmd  OxideMaskedHighAspectRatioEtch_withFlux_run_3.cmd  OxideMaskedHighAspectRatioEtch_withFlux_run_4.cmd  OxideMaskedHighAspectRatioEtch_withFlux_run_5.cmd  OxideMaskedHighAspectRatioEtch_withFlux_run_6.cmd  OxideMaskedHighAspectRatioEtch_withFlux_run_7.cmd  SimpleRIESiliconTrench.cmd  test_2d.cmd  test_coarse.cmd
cases/: BoschDRIE.cmd  MultiStepTSVProcess.cmd  OMHARE.cmd  OxideMaskedHighAspectRatioEtch.cmd  OxideMaskedHighAspectRatioEtch_withFlux.cmd  SimpleRIESiliconTrench.cmd  scenario1_rie_fps.tdr  trial_run.cmd
etchingWithPlasma/: ion_enhanced_etch.cmd  ion_enhanced_etch_run_1.cmd  (+11 more)
(+45 files in other folders)
