[tool.poetry]
name = "sprocesstrial"
version = "0.1.0"
description = ""
authors = ["Utkarsh <saraswat.utk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
paramiko = ">=3.0.0,<6.0.0"
scp = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

